chore: pushイベントのパスに'supabase/**'と'.github/workflows/functions_ci.yaml'を追加

--- a/.github/workflows/supabase_ci.yaml
+++ b/.github/workflows/supabase_ci.yaml
@@ -5,6 +5,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'supabase/**'
+      - '.github/workflows/functions_ci.yaml'
   pull_request:
     branches:
       - main
