--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -1,5 +1,4 @@
-name: Supabase CI
-description: SupabaseプロジェクトのCI
+name: Functions CI
 
 on:
   push:
@@ -7,13 +6,13 @@ on:
       - main
     paths:
       - 'supabase/**'
-      - '.github/workflows/supabase_ci.yaml'
+      - '.github/workflows/functions_ci.yaml'
   pull_request:
     branches:
       - main
     paths:
       - 'supabase/**'
-      - '.github/workflows/supabase_ci.yaml'
+      - '.github/workflows/functions_ci.yaml'
 
 env:
   DENO_VERSION: 2.3.1
