--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,19 @@
   "extends": ["airbnb", "airbnb-typescript", "prettier"],
   "rules": {
     "consistent-return": "off",
-    "import/extensions": "off"
+    "import/extensions": "off",
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": [
+          "**/*.test.ts",
+          "**/*.spec.ts",
+          "**/test/**",
+          "**/__tests__/**",
+          "**/__mocks__/**"
+        ]
+      }
+    ]
   },
   "ignorePatterns": [
     "node_modules/",
