--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 API_BASE_URL=http://localhost:5173
 DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
+SECRET_KEY=your_secret_key
 
 # Direct connection to the database. Used for migrations
 DIRECT_URL=postgres://postgres:password@localhost:5432/postgres 
