--- a/.github/actions/setup_node/action.yaml
+++ b/.github/actions/setup_node/action.yaml
@@ -6,6 +6,10 @@ inputs:
     description: 'Node.jsのバージョンが記述されたファイル'
     required: true
     default: '.node-version'
+  post-command:
+    description: 'Node.jsのセットアップ後に実行するコマンド'
+    required: false
+    default: ''
 
 runs:
   using: 'composite'
@@ -26,3 +30,10 @@ runs:
       if: steps.node-modules-cache.outputs.cache-hit != 'true'
       shell: bash
       run: npm ci
+
+    - name: Node.jsのセットアップ後のコマンド実行
+      if: ${{ inputs.post-command != '' }}
+      shell: bash
+      run: |
+        echo "Node.jsのセットアップ後のコマンドを実行します"
+        eval ${{ inputs.post-command }}
