--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "hono": "^4.6.18",
     "hono-remix-adapter": "^0.5.4",
     "lucide-react": "^0.487.0",
+    "next-themes": "^0.4.6",
     "pino": "^9.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rss-parser": "^3.13.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.0.5",
