--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 API_BASE_URL=http://localhost:5173
+CORS_ORIGIN=http://localhost:5173
 DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
 
 # Direct connection to the database. Used for migrations
