--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "deploy": "npm run build && wrangler pages deploy",
     "test": "vitest run",
     "test:frontend:coverage": "vitest run -c vitest/config.frontend.ts --coverage",
-    "test:backend:coverage": "vitest run -c vitest/config.backend.ts --coverage",
+    "test:service:coverage": "vitest run -c vitest/config.service.ts --coverage",
+    "test:api:coverage": "vitest run -c vitest/config.api.ts --coverage",
     "check-types": "tsc --noEmit",
     "lint": "eslint --ext .ts,.tsx .",
     "lint:fix": "eslint --ext .ts,.tsx . --fix",
