fix: package-lock.jsonの余分なクォートを削除

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ on:
       - 'public/**'
       - 'prisma/**'
       - 'package.json'
-      - 'package-lock.json''
+      - 'package-lock.json'
   pull_request:
     branches:
       - main
