--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -22,17 +22,9 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  setup:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check if CI succeeded
-        id: check_ci
-        run: echo "IS_CI_SUCCESS=${{ github.event.workflow_run && github.event.workflow_run.conclusion == 'success' }}" >> $GITHUB_ENV
-
   web:
-    needs: setup
     runs-on: ubuntu-latest
-    if: ${{ github.env.IS_CI_SUCCESS || github.event.inputs.deploy_type == 'web' }}
+    if: ${{ github.event.workflow_run && github.event.workflow_run.conclusion == 'success' || github.event.inputs.deploy_type == 'web' }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -57,9 +49,8 @@ jobs:
         run: echo $CMD_OUTPUT
 
   database:
-    needs: setup
     runs-on: ubuntu-latest
-    if: ${{ github.env.IS_CI_SUCCESS || github.event.inputs.deploy_type == 'database' }}
+    if: ${{ github.event.workflow_run && github.event.workflow_run.conclusion == 'success' || github.event.inputs.deploy_type == 'database' }}
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
       DIRECT_URL: ${{ secrets.DIRECT_DATABASE_URL }}
