--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-neverthrow": "^1.1.4",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.7.0",
