--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,7 +39,8 @@
           "strings": "on",
           "other": "on"
       },
-      "editor.snippetSuggestions": "top"
+      "editor.snippetSuggestions": "top",
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "deno.enable": true,
   "deno.enablePaths": [
