chore: package-lock.jsonにneverthrowを追加し、settings.jsonにcSpellの単語を追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,7 +30,8 @@
     "qiita",
     "Supabase",
     "Timestamptz",
-    "zenn"
+    "zenn",
+    "neverthrow"
   ],
   "[markdown]":  {
       "editor.wordWrap": "on",
