--- a/supabase/functions/fetch_articles/deno.json
+++ b/supabase/functions/fetch_articles/deno.json
@@ -1,4 +1,10 @@
 {
   "imports": {},
-  "nodeModulesDir": "auto"
+  "nodeModulesDir": "auto",
+  "test": {
+    "exclude": [
+      "repository.ts",
+      "executor.ts"
+    ]
+  }
 }
