--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -96,6 +96,9 @@ jobs:
               deno coverage ./coverage --exclude="$EXCLUDE_FILES" >> "$COVERAGE_DIR"
             )
           done
+        env:
+          SUPABASE_URL: ${{ env.SUPABASE_URL }}
+          SUPABASE_ANON_KEY: ${{ env.SUPABASE_ANON_KEY }}
       - name: Output coverage
         # カバレッジの結果をGitHubのPRコメントに出力
         run: |
