feat: テスト実行時にSUPABASE_URLとSUPABASE_ANON_KEYを出力

--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -75,6 +75,8 @@ jobs:
       - name: exec tests
         # deno testはdeno.jsonのある環境でしか実行できないため、各関数のディレクトリで実行する
         run: |
+          echo $SUPABASE_URL
+          echo $SUPABASE_ANON_KEY
           # 共通のcoverageを格納するファイルを作成
           touch coverage.txt
           COVERAGE_DIR=$(pwd)/coverage.txt
