--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -68,6 +68,8 @@ jobs:
         uses: supabase/setup-cli@v1
         with:
           version: latest
+      - name: supabase start
+        run: supabase start
       - name: setup env
         run: |
           echo "SUPABASE_URL=$(supabase status --output json | jq -r '.API_URL')" >> $GITHUB_ENV
