chore: 環境変数にNO_COLORを追加

--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -124,6 +124,7 @@ jobs:
         env:
           SUPABASE_URL: ${{ env.SUPABASE_URL }}
           SUPABASE_ANON_KEY: ${{ env.SUPABASE_ANON_KEY }}
+          NO_COLOR: true
 
       - name: Output coverage
         # カバレッジの結果をGitHubのPRコメントに出力
