style: カバレッジ結果の囲み記法を修正

--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -116,9 +116,9 @@ jobs:
 
               # カバレッジの結果を共通のファイルにコピー
               echo "Coverage for $function_name" >> "$COVERAGE_DIR"
-              echo "```" >> "$COVERAGE_DIR"
+              echo "\`\`\`" >> "$COVERAGE_DIR"
               deno coverage ./coverage --exclude="$EXCLUDE_FILES" >> "$COVERAGE_DIR"
-              echo "```" >> "$COVERAGE_DIR"
+              echo "\`\`\`" >> "$COVERAGE_DIR"
             )
           done
 
