--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -71,7 +71,7 @@ jobs:
         with:
           version: latest
 
-      - name: Node.jsの構築
+      - name: Node.jsの構築(DBのマイグレーション用)
         uses: ./.github/actions/setup_node
         with:
           node-version-file: .node-version
