chore: カバレッジ設定ファイルのパスを修正し、新しい設定ファイルを追加

--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -112,7 +112,7 @@ jobs:
 
 
               # カバレッジの対象外ファイルを取得
-              EXCLUDE_FILES=$(yq '.exclude[]' coverage_config.yml | xargs | sed 's/ /|/g')
+              EXCLUDE_FILES=$(yq '.exclude[]' coverage.config.yml | xargs | sed 's/ /|/g')
 
               # カバレッジの結果を共通のファイルにコピー
               echo "Coverage for $function_name" >> "$COVERAGE_DIR"
