--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# edge環境ではprisma://から始まるURLにする必要がある
 DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
 
 # Direct connection to the database. Used for migrations
