--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -172,7 +172,7 @@ jobs:
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
 
-      - name: バックエンドのテスト
+      - name: サービスのテスト
         uses: ./.github/actions/test_cov
         with:
           target: service
@@ -207,7 +207,7 @@ jobs:
           DIRECT_URL: ${{ env.DATABASE_URL }}
         run: npm run db:migrate
 
-      - name: バックエンドのテスト
+      - name: APIのテスト
         uses: ./.github/actions/test_cov
         with:
           target: api
