--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,9 @@
 name = "trend-diary"
-compatibility_date = "2025-01-25"
+compatibility_date = "2025-04-01"
 compatibility_flags = [ "nodejs_compat" ]
-main = "./src/application/server.ts"
+main = "./dist/server/index.js"
+preview_urls = true
 
 [assets]
-directory = "./dist/client"
+directory = "./dist/client/"
 run_worker_first = true # ミドルウェアを挟むため
