--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,6 @@
 name = "trend-diary"
 compatibility_date = "2025-04-01"
+compatibility_flags = [ "nodejs_compat" ]
 main = "./dist/server/index.js"
 preview_urls = true
 
