--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,4 +6,6 @@ preview_urls = true
 
 [assets]
 directory = "./dist/client"
-run_worker_first = true # ミドルウェアを挟むため
+
+[observability.logs]
+enabled = true
