--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -111,7 +111,7 @@ jobs:
               deno test --allow-read --allow-env --allow-net --allow-write --allow-run -c deno.json --coverage=coverage > ../../../coverage/${function_name}
             )
           done
-      - name: PRにカバレッジをコメント
+      - name: カバレッジをまとめる
         if: github.event_name == 'pull_request'
         working-directory: coverage
         run: |
@@ -122,6 +122,12 @@ jobs:
             echo "\`\`\`" >> coverage_report.md
             echo "</details>" >> coverage_report.md
           done
+        env:
+          NO_COLOR: true
+      - name: PRにカバレッジをコメント
+        if: github.event_name == 'pull_request'
+        run: |
+          gh pr comment ${{ github.event.pull_request.number }} --body "$(cat coverage_report.md)"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NO_COLOR: true
